@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-09T00:43:58Z",
-  "count_outdated" : 2121,
-  "uniques_outdated" : 681,
+  "timestamp" : "2023-12-09T16:11:13Z",
+  "count_outdated" : 2123,
+  "uniques_outdated" : 682,
   "count" : 2184,
   "uniques" : 694,
   "views" : [
-    {
-      "timestamp": "2023-11-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-11-26T00:00:00Z",
       "count": 13,
